--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,31 +2,12 @@
   <div class="row">
     <div class="col-xs-12">
       <form>
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" placeholder="Name" [(ngModel)]="name" name="name">
-        </div>
-        <div class="form-group">
-          <label for="name">Last name</label>
-          <input type="text" class="form-control" placeholder="Last name" [(ngModel)]="lastName" name="lastName">
-        </div>
-        <div class="form-group">
-          <label for="name">Username</label>
-          <input type="text" class="form-control" placeholder="Username" [(ngModel)]="username" name="username">
-        </div>
-        <div class="form-group">
-          <label for="name">Password</label>
-          <input type="password" class="form-control" placeholder="1234" [(ngModel)]="password" name="password">
-        </div>
-        <div class="form-group">
-          <label for="name">Confirm password</label>
-          <input type="password" class="form-control" placeholder="1234" [(ngModel)]="repeatPasword"
-            name="repeatPasword">
-        </div>
-        <div class="form-group">
-          <label for="name">Favorite color</label>
-          <input type="text" class="form-control" placeholder="Green" [(ngModel)]="favoriteColor" name="favoriteColor">
-        </div>
+        <app-field [(value)]="name" [label]="'Name'"></app-field>
+        <app-field [(value)]="lastName" [label]="'Last Name'"></app-field>
+        <app-field [(value)]="username" [label]="'username'"></app-field>
+        <app-field [(value)]="password" [label]="'password'" [type]="'password'"></app-field>
+        <app-field [(value)]="repeatPasword" [label]="'Confirm password'" [type]="'password'"></app-field>
+        <app-field [(value)]="favoriteColor" [label]="'favoriteColor'"></app-field>
       </form>
     </div>
   </div>
